--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -35,3 +35,38 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
 
+.search-bar-container {
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  margin-top: 16px;
+}
+
+.search-bar {
+  width: 50%;
+  max-width: 60%;
+  max-height: 120%;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 30px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.search-bar .MuiOutlinedInput-root {
+  border-radius: 30px;
+}
+
+.search-bar .MuiOutlinedInput-notchedOutline {
+  border: 1px solid #ccc;
+}
+
+.search-bar .MuiInputBase-input {
+  padding: 16px 20px;
+}
+
+.search-bar .MuiInputLabel-root {
+  padding-left: 10px;
+}
+
+.search-bar .MuiInputLabel-shrink {
+  transform: translate(14px, -6px) scale(0.85);
+}
