--- a/src/Posts/Post1/Post1.css
+++ b/src/Posts/Post1/Post1.css
@@ -65,3 +65,13 @@ html, body {
   padding: 0;
   overflow-y: scroll;
 }
+
+.disqus-container {
+  margin-top: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 60%; 
+  margin: 20px auto; 
+  padding: 2rem; 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+}
